[tool.poetry]
name = "health-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "health_app"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pandas = "^2.2.3"
matplotlib = "^3.9.4"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"
tensorflow = "^2.18.0"
pillow = "^11.0.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
streamlit-authenticator = "^0.4.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
